# Sklad-Inventory

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_28_create_user_table.py
app/: config.py  db.py  main.py  models.py
